k8s/app-python/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-python
  labels:
    app: app-python
spec:
  type: LoadBalancer
  selector:
    app: app-python
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
